simplify scan endpoint
